# reversible-deq

./: .gitignore  README.md  pyproject.toml
experiments/language/: _parameters.py  language-deq.py
experiments/vision/: _models.py  _parameters.py  deq.py  resdeq.py
reversible_deq/: __init__.py  _adjoint.py  _base.py  _custom_types.py  _solve.py
reversible_deq/_solver/: __init__.py  anderson.py  relaxed.py  reversible.py  simple.py
tests/: helpers.py  test_adjoint.py
